fix a bug whereby delete modal was not taking the full height of the page
this was visible when i had to delete a lengthy piece of text that overflows the clientHeight. implemented a temporary solution - page scrolls to top when modal shows

--- a/client/vite-project/src/components/delete-modal/DeleteModal.module.scss
+++ b/client/vite-project/src/components/delete-modal/DeleteModal.module.scss
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    // TODO; modal does not cover the full heigh of the page if the page has been scrolled.
-    height: 100%;
+    // TODO; modal does not cover the full height of the page if the page has been scrolled.
+    height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.9);
     position: absolute;
